# psai-ops

./: pyproject.toml
.github/: README.md
notebooks/: demo.ipynb
psaiops/combine/: app.py
psaiops/common/: model.py  style.py  tokenizer.py  utils.py
psaiops/compose/contrast/: app.py  lib.py
psaiops/compose/maths/: app.py
psaiops/elements/: data.py
psaiops/score/attention/: app.py  lib.py
psaiops/score/human/: app.py  docs.md  lib.py  tuto.md  ui.py  ux.py
psaiops/score/human/data/: contract.md  cookies.txt  entropies.pt  hc3.json  indices.pt  tokens.pt  wikipedia.txt
psaiops/score/human/data/samples/: hc3.json  jailbreak.json  known.json  system.json  trace.json
psaiops/score/human/data/state/: entropies.pt  indices.pt  labels.pt  perplexities.pt  ranks.pt  samplings.pt  surprisals.pt  tokens.pt  unicodes.pt
psaiops/score/human/docs/: readme.md  scoring.md
psaiops/score/residual/: app.py  lib.py
psaiops/score/router/: app.py  lib.py
psaiops/score/shapley/: app.py
psaiops/score/similarity/: app.py
psaiops/score/surprisal/: app.py  lib.py
